New Text Document.txt
2025-11-13 14:47:12.816 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:9:26)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
2025-11-13 14:51:21.388 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:9:26)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
2025-11-13 14:51:25.623 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:9:26)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
2025-11-13 14:52:20.514 [error] /var/task/api/update-events.js:17
        console.error('Error uploading events to blob store:', error);
        ^^^^^^^

SyntaxError: Unexpected identifier 'console'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function.<anonymous> (node:internal/modules/cjs/loader:1263:12)
    at /opt/rust/nodejs.js:2:13528
    at Function.zr (/opt/rust/nodejs.js:2:13906)
    at Ue.e.<computed>.Be._load (/opt/rust/nodejs.js:2:13498)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
Node.js process exited with exit status: 1. The logs above can help with debugging the issue.
/var/task/api/update-events.js:17
        console.error('Error uploading events to blob store:', error);
        ^^^^^^^

SyntaxError: Unexpected identifier 'console'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function.<anonymous> (node:internal/modules/cjs/loader:1263:12)
    at /opt/rust/nodejs.js:2:13528
    at Function.zr (/opt/rust/nodejs.js:2:13906)
    at Ue.e.<computed>.Be._load (/opt/rust/nodejs.js:2:13498)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
Node.js process exited with exit status: 1. The logs above can help with debugging the issue.
2025-11-13 15:04:36.953 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:9:26)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
2025-11-13 15:04:40.702 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:9:26)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
latest error 
2025-11-13 15:11:44.310 [error] Error uploading events to blob store: BlobError: Vercel Blob: This blob already exists, use `allowOverwrite: true` if you want to overwrite it. Or `addRandomSuffix: true` to generate a unique filename. Read more about this error in our documentation: https://vercel.link/blob-allow-overwrite
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:561:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async put (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:1218:22)
    at async module.exports [as handler] (/var/task/api/update-events.js:11:25)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
2025-11-13 15:11:36.934 [error] Error in get-events API: BlobNotFoundError: Vercel Blob: The requested blob does not exist
    at getBlobError (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:555:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async /var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:653:31
    at async requestApi (/var/task/node_modules/@vercel/blob/dist/chunk-KLNTTDLT.cjs:599:23)
    at async head (/var/task/node_modules/@vercel/blob/dist/index.cjs:46:20)
    at async module.exports [as handler] (/var/task/api/get-events.js:11:24)
    at async r (/opt/rust/nodejs.js:2:15569)
    at async Server.<anonymous> (/opt/rust/nodejs.js:2:11594)
    at async Server.<anonymous> (/opt/rust/nodejs.js:16:7750)
